--- a/Shane Website V1/index.html
+++ b/Shane Website V1/index.html
@@ -15,6 +15,7 @@
 <body>
 			<canvas id="backgroundCanvas"></canvas>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.0/pixi.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/pixi-filters@3.0.3/dist/pixi-filters.js"></script>
 			<script src="scripts/index.js"></script>
 
 			<div id="mainContainer">
