added more projects

--- a/Shane Website V1/code/index.html
+++ b/Shane Website V1/code/index.html
@@ -56,7 +56,7 @@
                  alt="Picture of UI for Bubblz.space">
         </dd>
         <dd>
-            bubblz.space is peer to peer zoom competitor, made in 24 hours for the HackUMBC hackathon. It was built using web technologies including WebRTC, PeerJS Javascript, HTML, and CSS. The
+            bubblz.space is peer to peer zoom competitor, made in 24 hours on a team of three for the HackUMBC hackathon. It was built using web technologies including WebRTC, PeerJS Javascript, HTML, and CSS. The
             advantage bubblz.space has over other video sharing software is the concept of “the bubble.” Bubbles are
             like public breakout rooms. When you go into a bubble you can only hear people who are talking in your
             bubble. Going in and out of bubbles is as easy as dragging your video feed to whichever bubble you want!
@@ -66,21 +66,14 @@
             The site was/is (as of November 2020) live at <a href="https://bubblz.space/">bubblz.space</a>
             Note that it may only work in Chrome and Edge
         </dd>
-        <dt>CSCI306 Software Engineering, 2020: </dt>
+        <dt>CSCI306 Software Engineering, 2020: Campus Themed Clue Game </dt>
         <dd>
             <img src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/285/069/datas/gallery.jpg"
                  alt="Picture of UI for Bubblz.space">
         </dd>
         <dd>
-            bubblz.space is peer to peer zoom competitor, made in 24 hours for the HackUMBC hackathon. It was built using web technologies including WebRTC, PeerJS Javascript, HTML, and CSS. The
-            advantage bubblz.space has over other video sharing software is the concept of “the bubble.” Bubbles are
-            like public breakout rooms. When you go into a bubble you can only hear people who are talking in your
-            bubble. Going in and out of bubbles is as easy as dragging your video feed to whichever bubble you want!
-            This is nice because a professor or TA can see everyone in the class, even when in breakout rooms to more
-            easily gauge how well the class is doing on the discussion or assignment.
-            <br><br>
-            The site was/is (as of November 2020) live at <a href="https://bubblz.space/">bubblz.space</a>
-            Note that it may only work in Chrome and Edge
+            An accurate reconstruction of the board game Clue with a new campus themed map, bad sound effects, fun music, and pictures.
+            The game was written in a team of two using OOP principles and test driven development in Java. The final product is over 4000 lines of code.
         </dd>
 
 
