Added another project

--- a/Shane Website V1/code/index.html
+++ b/Shane Website V1/code/index.html
@@ -68,18 +68,12 @@
         </dd>
         <dt>CSCI306 Software Engineering, 2020: Campus Themed Clue Game </dt>
         <dd>
-            <img src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/285/069/datas/gallery.jpg"
-                 alt="Picture of UI for Bubblz.space">
+            <img src="/code/imgs/ClueGame.png" alt="Picture ClueGame UI">
         </dd>
         <dd>
             An accurate reconstruction of the board game Clue with a new campus themed map, bad sound effects, fun music, and pictures.
             The game was written in a team of two using OOP principles and test driven development in Java. The final product is over 4000 lines of code.
         </dd>
-
-
-
-
-        <dd> <br><b>Awards: </b>Best use of secured cloud technologies from General Dynamics Mission Systems, presented by Wolfram</dd>
     </div>
     <div id="online">
         <h2>Online</h2>
