added beta scrolling

--- a/Shane Website V1/index.html
+++ b/Shane Website V1/index.html
@@ -26,13 +26,12 @@
 <div id="mainContainer">
     <h1 id="name">Shane Cranor</h1>
     <div id="h2Container">
-        <a id="code" href="/Code/index.html"><u>Code</u></a>
+        <a id="code" hrcef="/Code/index.html"><u>Code</u></a>
         <a href="https://codepen.io/Thisisntme/"><u>Music</u></a>
         <a href="https://codepen.io/Thisisntme/"><u>Art</u></a>
         <a href="https://codepen.io/Thisisntme/"><u>Photos</u></a>
     </div>
 </div>
-<div id="bottomGradient"></div>
 </body>
 
 </html>
