added more projects to code

--- a/Shane Website V1/code/index.html
+++ b/Shane Website V1/code/index.html
@@ -74,6 +74,38 @@
             An accurate reconstruction of the board game Clue with a new campus themed map, bad sound effects, fun music, and pictures.
             The game was written in a team of two using OOP principles and test driven development in Java. The final product is over 4000 lines of code.
         </dd>
+        <dt>Random Quarantine Project, 2020: <a href="https://codepen.io/Thisisntme/pen/gOPvdMm">
+            Procedural Interactive Pixel Art Kaleidoscope</a> </dt>
+        <dd>
+            <p class="codepen" data-height="753" data-theme-id="dark" data-default-tab="result" data-user="Thisisntme" data-slug-hash="gOPvdMm" data-preview="true" style="height: 500px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Procedural Interactive Pixel Art Kaleidoscope">
+  <span>See the Pen <a href="https://codepen.io/Thisisntme/pen/gOPvdMm">
+  Procedural Interactive Pixel Art Kaleidoscope</a> by Shane (<a href="https://codepen.io/Thisisntme">@Thisisntme</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+        </dd>
+        <dd>
+            I made this in my spare time over the summer of 2020 while hiding from the rona with my family. The image is generated from a strange modified iterative XOR function. Each coordinate is passed through
+            3 instances of the XOR function, one for the hue, saturation, and lightness. Based on the current FPS, the program
+            dynamically changes the number of pixels rendered. The Kaleidoscope effect looks cool, but also serves to increase the framerate by reducing the number of calls to the XOR function
+            as my iterative XOR function is not particularly efficient.
+        </dd>
+        <dt>CSCI101/CSCI261, 2019: 3D Space Flight Simulator / Procedural Planet Generator </dt>
+        <dd>
+            <img src="/code/imgs/ClueGame.pg" alt="Picture of Procedurally Generated Planets">
+        </dd>
+        <dd>
+            Using the 3D engine I built in 2017, I built a space flight simulator demo in Python. For this project I also built a procedural
+            planet generator that creates 3D planets with a specified level of detail.
+        </dd>
+        <dt>15-112 Fundamentals of Programming & Computer Science at Carnegie Mellon, 2017: 3D Arcade Game </dt>
+        <dd>
+            <img src="/code/imgs/ClueGame.pg" alt="Picture of Procedurally Generated Planets">
+        </dd>
+        <dd>
+            Using the 3D engine I built in 2017, I built a space flight simulator demo in Python. For this project I also built a procedural
+            planet generator that creates 3D planets with a specified level of detail.
+        </dd>
     </div>
     <div id="online">
         <h2>Online</h2>
