--- a/Shane Website V1/index.html
+++ b/Shane Website V1/index.html
@@ -26,19 +26,198 @@
 <div id="mainContainer">
     <h1 id="name">Shane Cranor</h1>
     <div id="h2Container">
-        <a id="code" hrcef="/Code/index.html"><u>Code</u></a>
-        <a href="https://codepen.io/Thisisntme/"><u>Music</u></a>
-        <a href="https://codepen.io/Thisisntme/"><u>Art</u></a>
-        <a href="https://codepen.io/Thisisntme/"><u>Photos</u></a>
+        <a id="code" hrcef="/Code/index.html" ><u data-text="Code">Code</u></a>
+        <a href="https://codepen.io/Thisisntme/"  data-text="Music"><u>Music</u></a>
+        <a href="https://codepen.io/Thisisntme/"data-text="Art"><u>Art</u></a>
+        <a href="https://codepen.io/Thisisntme/"data-text="Photos"><u>Photos</u></a>
     </div>
     <div id="bioFrame">
-        <div id="bioHeader">
-            <h1>BIO</h1>
-
+        <div id="bioHeader" data-text="BIO">
+            BIO
+        </div>
+        <div id="bioContents">
+            <p>Hi, I'm Shane and this is my website. I'm currently studying for my Bachelors in Computer Science </p>
         </div>
     </div>
 </div>
+<canvas id="onTopCanvas"></canvas>
+<!-- https://codepen.io/ZaneMiller/pen/wWYQBL?editors=1100 -->
+<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+    <defs>
+        <!-- MASK DEFS -->
+        <g id="glitch-mask-left" transform="translate(0, -2.5)">
+            <rect id="rect0" x="5%" y="45%" width="7%" height="5%" fill="white" />
+            <rect id="rect1" x="60%" y="25%" width="7%" height="4%" fill="white" />
+            <rect id="rect2" x="35%" y="75%" width="10%" height="4%" fill="white" />
+            <rect id="rect3" x="25%" y="50%" width="30%" height="2%" fill="white" />
+        </g>
 
+        <g id="glitch-mask-right" transform="translate(0, -2.5)">
+            <rect id="rect4" x="5%" y="35%" width="11%" height="2%" fill="white" />
+            <rect id="rect5" x="60%" y="60%" width="20%" height="1%" fill="white" />
+            <rect id="rect6" x="80%" y="35%" width="20%" height="3%" fill="white" />
+        </g>
+
+
+
+        <filter id="filter">
+            <!-- FLOODS -->
+            <feFlood flood-color="#0070E6" result="COLOR-left" />
+            <feFlood flood-color="#E500E6" result="COLOR-right" />
+
+            <!-- MASKS -->
+            <feImage xlink:href="#glitch-mask-left" result="MASK-left-shift" />
+            <feImage xlink:href="#glitch-mask-right" result="MASK-right-shift" />
+
+
+            <!-- LEFT SHIFTED -->
+            <feComposite in="SourceGraphic" in2="MASK-left-shift" operator="in" result="LEFT_SHIFT_10" />
+            <feOffset dx="-3" dy="0" in="LEFT_SHIFT_10" result="LEFT_SHIFT_20" />
+
+            <!-- RIGHT SHIFTED -->
+            <feComposite in="SourceGraphic" in2="MASK-right-shift" operator="in" result="RIGHT_SHIFT_10" />
+            <!-- RIGHT SHIFT RESULT -->
+            <feOffset dx="3" dy="0" in="RIGHT_SHIFT_10" result="RIGHT_SHIFT_20" />
+
+
+            <!-- REMAINDER -->
+            <feComposite in="SourceGraphic" in2="MASK-left-shift" operator="out" result="REMAINDER_10" />
+            <feComposite in="REMAINDER_10" in2="MASK-right-shift" operator="out" result="REMAINDER_20" />
+
+            <feMerge result="RESULT_10">
+                <feMergeNode in="RIGHT_SHIFT_20" />                    <feMergeNode in="LEFT_SHIFT_20" />
+                <feMergeNode in="REMAINDER_20" />
+            </feMerge>
+
+
+
+            <!-- REMAINDER LEFT -->
+            <feComposite in="COLOR-left" in2="RESULT_10" operator="in" result="RESULT_LEFT_10" />
+            <feOffset dx="3" dy="1" in="RESULT_LEFT_10" result="RESULT_LEFT_20" />
+
+            <!-- REMAINDER RIGHT -->
+            <feComposite in="COLOR-right" in2="RESULT_10" operator="in" result="RESULT_RIGHT_10" />
+            <feOffset dx="-3" dy="-1" in="RESULT_RIGHT_10" result="RESULT_RIGHT_20" />
+
+            <feGaussianBlur stdDeviation="1 1" x="0%" y="0%" width="100%" height="100%" in="RESULT_RIGHT_20" edgeMode="none" result="blurRight"/>
+            <feGaussianBlur stdDeviation="1 1" x="0%" y="0%" width="100%" height="100%" in="RESULT_LEFT_20" edgeMode="none" result="blurLeft"/>
+            <feMerge result="RESULT_20">
+                <feMergeNode in="blurRight" />
+                <feMergeNode in="blurLeft" />
+                <feMergeNode in="RESULT_10" />
+            </feMerge>
+
+        </filter>
+
+    </defs>
+</svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+    <defs>
+        <filter id="filterNoGlitch" color-interpolation-filters="sRGB">
+            <!-- FLOODS -->
+            <feFlood flood-color="#0060FF" result="COLOR-left" />
+            <feFlood flood-color="#FF00FF" result="COLOR-right" />
+
+            <!-- MASKS -->
+            <feImage xlink:href="" result="MASK-left-shift" />
+            <feImage xlink:href="" result="MASK-right-shift" />
+
+
+            <!-- LEFT SHIFTED -->
+            <feComposite in="SourceGraphic" in2="MASK-left-shift" operator="in" result="LEFT_SHIFT_10" />
+            <feOffset dx="-3" dy="0" in="LEFT_SHIFT_10" result="LEFT_SHIFT_20" />
+
+            <!-- RIGHT SHIFTED -->
+            <feComposite in="SourceGraphic" in2="MASK-right-shift" operator="in" result="RIGHT_SHIFT_10" />
+            <!-- RIGHT SHIFT RESULT -->
+            <feOffset dx="3" dy="0" in="RIGHT_SHIFT_10" result="RIGHT_SHIFT_20" />
+
+
+            <!-- REMAINDER -->
+            <feComposite in="SourceGraphic" in2="MASK-left-shift" operator="out" result="REMAINDER_10" />
+            <feComposite in="REMAINDER_10" in2="MASK-right-shift" operator="out" result="REMAINDER_20" />
+
+            <feMerge result="RESULT_10">
+                <feMergeNode in="RIGHT_SHIFT_20" />                    <feMergeNode in="LEFT_SHIFT_20" />
+                <feMergeNode in="REMAINDER_20" />
+            </feMerge>
+
+
+
+            <!-- REMAINDER LEFT -->
+            <feComposite in="COLOR-left" in2="RESULT_10" operator="in" result="RESULT_LEFT_10" />
+            <feOffset dx="2" dy="2" in="RESULT_LEFT_10" result="RESULT_LEFT_20" />
+
+            <!-- REMAINDER RIGHT -->
+            <feComposite in="COLOR-right" in2="RESULT_10" operator="in" result="RESULT_RIGHT_10" />
+            <feOffset dx="-1" dy="-2" in="RESULT_RIGHT_10" result="RESULT_RIGHT_20" />
+
+            <feGaussianBlur stdDeviation="3 2" x="0%" y="0%" width="100%" height="100%" in="RESULT_RIGHT_20" edgeMode="none" result="blurRight"/>
+            <feGaussianBlur stdDeviation="3 2" x="0%" y="0%" width="100%" height="100%" in="RESULT_LEFT_20" edgeMode="none" result="blurLeft"/>
+            <feBlend mode="screen" x="0%" y="0%" width="100%" height="100%" in="blurRight" in2="blurLeft" result="blend"/>
+            <feMerge result="RESULT_20">
+                <feMergeNode in="blend" />
+                <feMergeNode in="RESULT_10" />
+            </feMerge>
+
+        </filter>
+
+    </defs>
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+    <defs>
+        <filter id="filterNoGlitch2" color-interpolation-filters="sRGB">
+            <!-- FLOODS -->
+            <feFlood flood-color="#0060FF" result="COLOR-left" />
+            <feFlood flood-color="#FF00FF" result="COLOR-right" />
+
+            <!-- MASKS -->
+            <feImage xlink:href="" result="MASK-left-shift" />
+            <feImage xlink:href="" result="MASK-right-shift" />
+
+
+            <!-- LEFT SHIFTED -->
+            <feComposite in="SourceGraphic" in2="MASK-left-shift" operator="in" result="LEFT_SHIFT_10" />
+            <feOffset dx="-3" dy="0" in="LEFT_SHIFT_10" result="LEFT_SHIFT_20" />
+
+            <!-- RIGHT SHIFTED -->
+            <feComposite in="SourceGraphic" in2="MASK-right-shift" operator="in" result="RIGHT_SHIFT_10" />
+            <!-- RIGHT SHIFT RESULT -->
+            <feOffset dx="3" dy="0" in="RIGHT_SHIFT_10" result="RIGHT_SHIFT_20" />
+
+
+            <!-- REMAINDER -->
+            <feComposite in="SourceGraphic" in2="MASK-left-shift" operator="out" result="REMAINDER_10" />
+            <feComposite in="REMAINDER_10" in2="MASK-right-shift" operator="out" result="REMAINDER_20" />
+
+            <feMerge result="RESULT_10">
+                <feMergeNode in="RIGHT_SHIFT_20" />                    <feMergeNode in="LEFT_SHIFT_20" />
+                <feMergeNode in="REMAINDER_20" />
+            </feMerge>
+
+
+
+            <!-- REMAINDER LEFT -->
+            <feComposite in="COLOR-left" in2="RESULT_10" operator="in" result="RESULT_LEFT_10" />
+            <feOffset dx="1" dy="1" in="RESULT_LEFT_10" result="RESULT_LEFT_20" />
+
+            <!-- REMAINDER RIGHT -->
+            <feComposite in="COLOR-right" in2="RESULT_10" operator="in" result="RESULT_RIGHT_10" />
+            <feOffset dx="-1" dy="-1" in="RESULT_RIGHT_10" result="RESULT_RIGHT_20" />
+
+            <feGaussianBlur stdDeviation="1 1" x="0%" y="0%" width="100%" height="100%" in="RESULT_RIGHT_20" edgeMode="none" result="blurRight"/>
+            <feGaussianBlur stdDeviation="1 1" x="0%" y="0%" width="100%" height="100%" in="RESULT_LEFT_20" edgeMode="none" result="blurLeft"/>
+            <feBlend mode="screen" x="0%" y="0%" width="100%" height="100%" in="blurRight" in2="blurLeft" result="blend"/>
+            <feMerge result="RESULT_20">
+                <feMergeNode in="blend" />
+                <feMergeNode in="RESULT_10" />
+            </feMerge>
+
+        </filter>
+
+    </defs>
+</svg>
 </body>
 
 </html>
