minor updates to scrolling etc

--- a/Shane Website V1/index.html
+++ b/Shane Website V1/index.html
@@ -32,8 +32,8 @@
         <a href="https://codepen.io/Thisisntme/"data-text="Photos"><u>Photos</u></a>
     </div>
     <div id="bioFrame">
-        <div id="bioHeader" data-text="BIO">
-            BIO
+        <div id="bioHeader" data-text="C:\SHANE\BIO>">
+            C:\SHANE\BIO>
         </div>
         <div id="bioContents">
             <p>Hi, I'm Shane and this is my website. I'm currently studying for my Bachelors in Computer Science </p>
