--- a/Shane Website V1/index.html
+++ b/Shane Website V1/index.html
@@ -42,7 +42,7 @@
 </div>
 <canvas id="onTopCanvas"></canvas>
 <!-- https://codepen.io/ZaneMiller/pen/wWYQBL?editors=1100 -->
-<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" transform="translate(0, 0)">
     <defs>
         <!-- MASK DEFS -->
         <g id="glitch-mask-left" transform="translate(0, -2.5)">
