--- a/Shane Website V1/index.html
+++ b/Shane Website V1/index.html
@@ -24,9 +24,11 @@
 <script src="scripts/index.js"></script>
 
 <div id="mainContainer">
-    <h1 id="name">Shane Cranor</h1>
+    <h1 id="name">
+        Shane Cranor
+    </h1>
     <div id="h2Container">
-        <a id="code" hrcef="/Code/index.html" ><u data-text="Code">Code</u></a>
+        <a id="code" href="/Code/index.html" ><u data-text="Code">Code</u></a>
         <a href="https://codepen.io/Thisisntme/"  data-text="Music"><u>Music</u></a>
         <a href="https://codepen.io/Thisisntme/"data-text="Art"><u>Art</u></a>
         <a href="https://codepen.io/Thisisntme/"data-text="Photos"><u>Photos</u></a>
