--- a/Shane Website V1/index.html
+++ b/Shane Website V1/index.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700;800&family=Roboto+Slab&family=Work+Sans:wght@100;200;400;700;800&display=swap"
           rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
@@ -28,17 +27,21 @@
         Shane Cranor
     </h1>
     <div id="h2Container">
-        <a id="code" href="/Code/index.html" ><u data-text="Code">Code</u></a>
-        <a href="https://codepen.io/Thisisntme/"  data-text="Music"><u>Music</u></a>
-        <a href="https://codepen.io/Thisisntme/"data-text="Art"><u>Art</u></a>
-        <a href="https://codepen.io/Thisisntme/"data-text="Photos"><u>Photos</u></a>
+        <a id="code" href="/Code/index.html" >    <u class="links">Code</u></a>
+        <a href="https://codepen.io/Thisisntme/" ><u class="links">Music</u></a>
+        <a href="https://codepen.io/Thisisntme/" ><u class="links">Art</u></a>
+        <a href="https://codepen.io/Thisisntme/" ><u class="links">Photos</u></a>
     </div>
     <div id="bioFrame">
         <div id="bioHeader" data-text="C:\SHANE\BIO>">
             C:\SHANE\BIO>
         </div>
         <div id="bioContents">
-            <p>Hi, I'm Shane and this is my website. I'm currently studying for my Bachelors in Computer Science </p>
+            <p>Hello, I can see that you have found my website! I'm currently studying for my
+                Bachelors ( + maybe a masters?) in Computer Science. My interests (in no particular order)
+            include: machine learning, computers, software design, web development, building hardware,
+                music, bass, guitar, drums, keyboards, mixing and mastering, experimenting/tinkering with anything,
+                and ultimate frisbee.</p>
         </div>
     </div>
 </div>
