--- a/Shane Website V1/code/index.html
+++ b/Shane Website V1/code/index.html
@@ -31,7 +31,7 @@
         <a href="shane.cranor.org">Art</a>
     </div>
     <div class="box">
-        <a href="shane.cranor.org">Photos</a>
+        <a href="/photos">Photos</a>
     </div>
 </div>
 <div id="title">
