--- a/Shane Website V1/unfinished/index.html
+++ b/Shane Website V1/unfinished/index.html
@@ -28,7 +28,7 @@
 		site incomplete
 	</h1>
 	<div id="h2Container">
-		<a id="code" href="/Code/index.html" class="links1"> <u class="links">Code</u></a>
+		<a id="code" href="code/index.html" class="links1"> <u class="links">Code</u></a>
 		<a href="https://soundcloud.com/shane_cranor" class="links1"><u class="links">Music</u></a>
 		<a href="https://shane.cranor.org" class="links1"><u class="links">Home!</u></a>
 		<a href="Photos/index.html" class="links1"><u class="links">Photos</u></a>
